--- a/natours/sass/main.scss
+++ b/natours/sass/main.scss
@@ -8,6 +8,7 @@
 @import './base/utilitis';
 
 @import './components/button';
+@import './components/composition';
 
 @import './layout/grid';
 @import './layout/header';
